<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_driver_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_driver_bus"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/nav_my_bus" />
    <item
        android:id="@+id/nav_driver_trip"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_trip" />
    <item
        android:id="@+id/nav_driver_emergency"
        android:icon="@drawable/ic_nav_emergency"
        android:title="@string/nav_emergency" />
    <item
        android:id="@+id/nav_driver_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
