<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_student_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_student_live_bus"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_live_bus" />
    <item
        android:id="@+id/nav_student_routes"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/nav_routes" />
    <item
        android:id="@+id/nav_student_lost_found"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_lost_found" />
    <item
        android:id="@+id/nav_student_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
